# top-github-scraper

./: .gitignore  .pre-commit-config.yaml  PARAMETERS.md  README.md  example.py  index.md  pyproject.toml  top_repo_info_machine learning_0_1.json  top_repo_urls_machine learning_0_1.json  top_user_info_machine learning_0_1.csv
html/top_github_scraper/: index.html  scrape_repo.html  scrape_user.html  utils.html
outputs/2021-01-09/21-29-41/.hydra/: hydra.yaml
outputs/2021-02-26/21-05-56/.hydra/: config.yaml
outputs/2021-02-26/21-22-37/.hydra/: hydra.yaml
tests/: test_utils.py
top_github_scraper/: __init__.py  scrape_repo.py  scrape_user.py  scraper.yaml  utils.py
